--- a/cppdemo.vcxproj
+++ b/cppdemo.vcxproj
@@ -140,8 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="std_bind.cpp" />
+    <ClCompile Include="functional.cpp" />
     <ClCompile Include="std_list.cpp" />
+    <ClCompile Include="tuple.cpp" />
     <ClCompile Include="unique_ptr.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
