--- a/cppdemo.vcxproj.filters
+++ b/cppdemo.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="tuple.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="numeric.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
