--- a/cppdemo.vcxproj
+++ b/cppdemo.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="inheritance.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="functional.cpp" />
     <ClCompile Include="numeric.cpp" />
