--- a/cppdemo.vcxproj.filters
+++ b/cppdemo.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="numeric.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="inheritance.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
