--- a/cppdemo.vcxproj.filters
+++ b/cppdemo.vcxproj.filters
@@ -43,4 +43,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="asm.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
+  </ItemGroup>
 </Project>
