added decltype demo

--- a/cppdemo.vcxproj
+++ b/cppdemo.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="constructor.cpp" />
+    <ClCompile Include="decltype.cpp" />
     <ClCompile Include="inheritance.cpp" />
     <ClCompile Include="InstructionSet.cpp" />
     <ClCompile Include="main.cpp" />
